--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,8 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: root
             MONGO_INITDB_ROOT_PASSWORD: example
-        ports:
-            - 27017:27017
+        # ports:
+        #     - 27017:27017
 
     mongo-test:
         container_name: local-althingi-store-db-test
