--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "psr-4": {
             "App\\": ["src/", "test/"]
         },
-        "files": [ "src/functions.php" ]
+        "files": [
+            "src/functions.php" ,
+            "src/transformers.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
