--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "laminas/laminas-diactoros": "^2.8",
         "laminas/laminas-httphandlerrunner": "^2.1",
         "laminas/laminas-servicemanager": "^3.10",
-        "mongodb/mongodb": "^1.11"
+        "mongodb/mongodb": "^1.11",
+        "league/event": "^3.0",
+        "monolog/monolog": "^2.4"
     },
     "autoload": {
         "psr-4": {
