--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
             - 9090:80
         environment:
             - STORE_DB_HOST=mongo
+            # - STORE_DB_HOST=${DOCKER_GATEWAY_HOST:-host.docker.internal}
             - STORE_DB_USER=root
             - STORE_DB_PASSWORD=example
         volumes:
