--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,9 @@ services:
                 - ENV=development
                 - IDE_KEY=VSCODE
         ports:
-            - 9090:80
+            - 8083:80
         environment:
             - STORE_DB_HOST=mongo
-            # - STORE_DB_HOST=${DOCKER_GATEWAY_HOST:-host.docker.internal}
             - STORE_DB_USER=root
             - STORE_DB_PASSWORD=example
         volumes:
@@ -58,8 +57,10 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: root
             MONGO_INITDB_ROOT_PASSWORD: example
-        # ports:
-        #     - 27017:27017
+        ports:
+            - 27017:27017
+        volumes:
+            - local-store-db-volume:/data/db
 
     mongo-test:
         container_name: local-althingi-store-db-test
@@ -70,3 +71,5 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: example
 
 
+volumes:
+    local-store-db-volume:
