--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
             - ./test:/var/app/test
             # - ./vendor:/var/app/vendor
             - ./www:/var/app/www
+            - ./phpunit.xml.dist:/var/app/phpunit.xml
             - ./composer.json:/var/app/composer.json
             - ./composer.lock:/var/app/composer.lock
             - ./wait-for.sh:/var/app/wait-for.sh
@@ -52,23 +53,23 @@ services:
 
     mongo:
         container_name: local-althingi-store-db
-        image: mongo:5.0.6-focal
+        image: bitnami/mongodb:6.0.1
         restart: always
         environment:
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
+            MONGODB_ROOT_USER: root
+            MONGODB_ROOT_PASSWORD: example
         ports:
             - 27017:27017
         volumes:
-            - local-store-db-volume:/data/db
+            - local-store-db-volume:/bitnami/mongodb
 
     mongo-test:
         container_name: local-althingi-store-db-test
-        image: mongo:5.0.6-focal
+        image: bitnami/mongodb:6.0.1
         restart: always
         environment:
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
+            MONGODB_ROOT_USER: root
+            MONGODB_ROOT_PASSWORD: example
 
 
 volumes:
