--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/composer,phpunit,osx,windows,visualstudiocode,phpstorm
+
+test/docs
